control-plane-operator/controllers/hostedcontrolplane/testdata/ignition-server/IBMCloud/zz_fixture_TestControlPlaneComponents_ignition_server_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    hypershift.openshift.io/desired-state-hash: 6fe6728123170cb638b33a92e9511d0d101d62f7156bf19047ff0bbaf777c17a
  creationTimestamp: null
  name: ignition-server
  namespace: hcp-namespace
  ownerReferences:
  - apiVersion: hypershift.openshift.io/v1beta1
    blockOwnerDeletion: true
    controller: true
    kind: HostedControlPlane
    name: hcp
    uid: ""
  resourceVersion: "1"
spec:
  tls:
    insecureEdgeTerminationPolicy: None
    termination: passthrough
  to:
    kind: Service
    name: ignition-server
    weight: null
  wildcardPolicy: None
status: {}
